--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -5,7 +5,6 @@
 
     li{
         font-family: Engravers, serif;
-        font-weight: bolder;
     }
 
 
@@ -144,7 +143,7 @@ div.rotate135{
     top: 0px; left: 0px; */
     }
 
-    .logo{
+    .nav-logo{
         position:absolute;
         top:35px;
         right: 135px;
