--- a/src/pages/event/style/font.scss
+++ b/src/pages/event/style/font.scss
@@ -1,6 +1,6 @@
 /* Font for Chinese */
 
-*{
+.cn-font{
     font-family: 'Noto Sans TC', sans-serif;
 }
 /* Font for English */
@@ -22,3 +22,5 @@
 .eng-font-bold{
     font-family: Engravers-Bold;
 }
+
+
