index Nav fixed

--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -8,20 +8,15 @@
     src:url(../../style/font/EngraversMTBold.ttf);
     }
     
-    @font-face {
+    /* @font-face {
     font-family: NotoSansTC-md;
     src:url(../../style/font/NotoSansTC-Medium.otf);
-    }
+    } */
 
     body {
         width: 100%;
     }
 
-    *{
-        font-family: Engravers;
-    }
-
-    
 
     /* ----------解決單邊滾動的scroll bar區域 -----------
     下了之後尺寸會位移ＱＱ？*/
@@ -52,7 +47,7 @@
         width:calc(100% - 70px) ;
         position: relative;
     }
-    video {
+    .index-video {
     position: absolute;
     z-index: -1000;
     top: 0;
@@ -67,6 +62,8 @@
     }
 
     div.slogan {
+    padding-top: 70px;
+    font-family: Engravers;
     height: 100vh; 
     letter-spacing: 2px;
     display: flex;
@@ -76,6 +73,26 @@
     color: #81FC4D;
     }
     
+    .slogan h1{
+        font-size:3rem;
+    }
+    .slogan h5{
+        font-size:1.5rem;
+    }
+
+    .start-scroll{
+        color: #81FC4D;
+    }
+    
+    .vertical-line {
+        text-align:center;
+        font-size:3rem;
+    }
+
+    .start-scroll p{
+        font-family: Engravers;
+    }
+
     .rect{
         width: calc(100% - 70px);
         height: 70px;
@@ -96,18 +113,6 @@
         top:6vh;
         left:2vh;
     }
-    .start-scroll{
-        position: absolute;
-        left:calc(50% - 20px);
-        bottom: 2em;
-        transform: translate(-50%,-50%);
-        color: #81FC4D;
-    }
-    
-    .vertical-line {
-        text-align:center;
-        font-size:3rem;
-    }
 
     /* ----------news區域 -----------*/
     .news-area{
@@ -118,8 +123,14 @@
     .news-slogen{
         background-color: #E8E8E8;
     }
+    .news-slogen h1{
+        font-family: Engravers;
+        font-size:3rem;
+        background-color: #E8E8E8;
+    }
 
     .news-slogen-TC{
+        font-size:3rem;
         font-weight: bolder;
         color:transparent;
         -webkit-text-stroke: 1px rgb(0, 0, 0);
@@ -147,21 +158,29 @@
     }
 
     .artist-slogan{
+        font-family: Engravers;
         color: #81FC4D;
         font-size: 4rem;
         padding-top: 50px;
         margin-left: 35px;
 
     }
-    /* .artist-slogan strong{
-        border-bottom: 2px solid #81FC4D;
-    } */
+    
+    .artist-slogan strong{
+        line-height: 100px;
+    }
 
     .item{
         height: 342px;
     }
 
+    .artist-title-tc{
+        margin-top: 30px;
+        font-size: 1.5rem;
+    }
+
     .artist-title-tc span {
+        font-size: 1.5rem;
         padding-left: 9em;
         font-family: Arial, Helvetica, sans-serif;
         color: #81FC4D;
@@ -225,13 +244,19 @@
         padding-top: 500px;
     }
     .event-slogan h1{
+        font-family: Engravers;
         font-size:5rem;
         line-height: 100px;
     
     }
     .event-eye{width: 70%;}
 
+    .event-title-tc{
+        font-size: 1.5rem;
+    }
+
     .event-title-tc span {
+        font-size: 1.5rem;
         padding-left: 9em;
         font-family: Arial, Helvetica, sans-serif;
         color: #000;
