--- a/src/style/Nav.css
+++ b/src/style/Nav.css
@@ -158,11 +158,13 @@ div.rotate135{
     .nav-logo-sm{
         display:none;
         position: absolute;
-        top:10px;
+        top:15px;
         left: 21px;
-        background-image: url('../pics/logo.svg') no-repeat;
-        width: 100px;
-        height: 10px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-image: url('../pics/logo.svg');
+        width: 174px;
+        height: 21px;
     }
 
     div.menu ul li {
@@ -244,5 +246,7 @@ div.rotate135{
         .nav-logo-sm{
             display:block;
         }
+
+        
     
     }
