--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -32,14 +32,14 @@ p {
 }
 
 .homepageA-left {
-    background-color: aqua;
+    /* background-color: aqua; */
     height: 100vh;
     width: 33vw;
     margin-left: 8%;
 }
 
 .homepageA-right {
-    background-color: yellowgreen;
+    /* background-color: yellowgreen; */
     width: 53vw;
     height: 100vh;
     margin-left: 3%;
@@ -93,7 +93,7 @@ p {
 }
 
 .homepageA-right-box {
-    background-color: yellow;
+    /* background-color: yellow; */
     width: 52vw;
     height: 80vh;
     margin-top: 18%;
@@ -101,7 +101,7 @@ p {
 }
 
 .homepageA-right-box-picA {
-    background-color: forestgreen;
+    /* background-color: forestgreen; */
     width: 26vw;
     height: 80vh;
     overflow:hidden;
@@ -109,7 +109,7 @@ p {
 }
 
 .homepageA-right-box-picB {
-    background-color: blue;
+    /* background-color: blue; */
     width: 25vw;
     height: 20vh;
     margin-left: 3%;
@@ -118,7 +118,7 @@ p {
 }
 
 .homepageA-right-box-picC {
-    background-color: pink;
+    /* background-color: pink; */
     width: 17vh;
     height: 17vh;
     position: absolute;
@@ -129,7 +129,7 @@ p {
 }
 
 .homepageA-right-box-picD {
-    background-color: grey;
+    /* background-color: grey; */
     width: 15vw;
     height: 55vh;
     position: absolute;
