--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -25,7 +25,7 @@ p {
     font-family: Engravers;
 }
 
-.test {
+.pro-outside {
     background-color: black;
     width: calc(100vw - 70px);
     height: 100vh;
@@ -169,4 +169,9 @@ p {
     position: absolute;
     top: 40%;
     left: 62.5%;
+}
+.pro-outside2 {
+    background-color: black;
+    width: calc(100vw - 70px);
+    height: 100vh;
 }
