--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -1,14 +1,30 @@
-// body {
-//   margin-top: 30px;
-//   margin-left: 70px;
-//   margin-right: 70px;
-//   background-color: #e8e8e8;
-// }
+@font-face {
+  font-family: Engravers;
+  src: url(../../../style/font/ENGR.ttf);
+}
+
+@font-face {
+  font-family: EngraversBold;
+  src: url(../../../style/font/EngraversMTBold.ttf);
+}
+
+@font-face {
+  font-family: NotoSansTC-Medium;
+  src: url(../../../style/font/NotoSansTC-Medium.otf)
+}
+
+
+body {
+  margin-top: 30px;
+  margin-left: 70px;
+  // margin-right: 70px;
+  background-color: #e8e8e8;
+}
 
 //----- Logo -----
 
 .logo-header {
-  width: 1045px;
+  width: 1100px;
   border-bottom: 2px solid #000;
 }
 
@@ -23,13 +39,13 @@
   position: relative;
   margin-top: 90px;
   width: 450px;
-  margin-left: 5px;
+  margin-left:30px;
   z-index: 0;
 }
 
 .title01 {
   width: 152px;
-  height: 46px;
+  height: 44px;
   background-color: #000;
   padding-bottom: 10px;
   position: absolute;
@@ -44,7 +60,7 @@
 
 .title02 {
   width: 378px;
-  height: 45px;
+  height: 43px;
   position: absolute;
   background-color: #81fc4d;
   top: 594px;
@@ -59,7 +75,7 @@
 
 .title03 {
   width: 260px;
-  height: 45px;
+  height: 43px;
   background-color: #81fc4d;
   position: absolute;
   top: 658px;
@@ -75,8 +91,8 @@
 // ----- form 表單 -----
 
 .container2 {
-  margin-top: 76px;
-  margin-left: -30px;
+  margin-top: 84px;
+  margin-left: -120px;
 }
 
 .member {
@@ -84,8 +100,8 @@
 }
 
 .member > h1 {
-  font-family: 'Saira Stencil One', cursive;
-  font-size: 58px;
+  font-family: EngraversBold;
+  font-size: 46px;
   letter-spacing: 5px;
 }
 
@@ -95,7 +111,7 @@
   width: 520px;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
-  line-height: 100px;
+  // line-height: 100px;
 }
 
 .loginbtn {
@@ -138,6 +154,7 @@
 //----- icons -----
 
 .gf {
+  height: 80px;
   border-bottom: 2px solid #000;
   font-size: 60px;
 }
@@ -152,8 +169,8 @@
 
 //----- input 樣式 -----
 
-.form-control {
-  // margin-top: 30px;
+.u-form > input {
+  margin-top: 30px;
   width: 520px;
   height: 60px;
   background-color: #e8e8e8;
