--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -16,7 +16,7 @@
 
 body {
   margin-top: 30px;
-  margin-left: 70px;
+  // margin-left: 70px;
   // margin-right: 70px;
   background-color: #e8e8e8;
 }
