--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -15,10 +15,10 @@
 
 
 body {
-  margin-top: 30px;
+  // margin-top: 30px;
   // margin-left: 70px;
   // margin-right: 70px;
-  background-color: #e8e8e8;
+  // background-color: #e8e8e8;
 }
 
 //----- Logo -----
