--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -10,16 +10,15 @@
 
 @font-face {
   font-family: NotoSansTC-Medium;
-  src: url(../../../style/font/NotoSansTC-Medium.otf)
+  src: url(../../../style/font/NotoSansTC-Medium.otf);
 }
 
-
-body {
-  // margin-top: 30px;
-  // margin-left: 70px;
-  // margin-right: 70px;
-  // background-color: #e8e8e8;
-}
+// body {
+//   margin-top: 30px;
+//   margin-left: 70px;
+//   margin-right: 70px;
+//   background-color: #e8e8e8;
+// }
 
 //----- Logo -----
 
@@ -39,7 +38,7 @@ body {
   position: relative;
   margin-top: 90px;
   width: 450px;
-  margin-left:30px;
+  margin-left: 30px;
   z-index: 0;
 }
 
