--- a/src/pages/user/styles/Menu.scss
+++ b/src/pages/user/styles/Menu.scss
@@ -1,4 +1,4 @@
-.edit, .userOrder, .coupon, .ticket, .userfav, .userauction{
+.u-edit, .u-userOrder, .u-coupon, .u-ticket, .u-userfav, .u-userauction{
     width: 100px;
     height: 45px;
     border: 2px solid #000;
