--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -122,9 +122,9 @@ label {
 //     font-size: 18px;   
 // }
 
-.u-userData {
-    margin-left: 270px;
-}
+// .u-userData {
+//     margin-left: 270px;
+// }
 
 .form-group {
     margin-top: 20px;
