--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -13,11 +13,14 @@
   src: url(../../../style/font/NotoSansTC-Medium.otf);
 }
 
+.u-body {
+  background-color: #e8e8e8;
+}
 
 //----- Logo -----
 
 .u-logo-header {
-  width: 1100px;
+  width: 1044px;
   border-bottom: 2px solid #000;
 }
 
@@ -83,11 +86,6 @@
 
 // ----- form 表單 -----
 
-.u-container2 {
-  margin-top: 84px;
-  margin-left: -120px;
-}
-
 .u-member {
   text-align: center;
 }
@@ -100,12 +98,12 @@
 
 //----- 登入、註冊btn -----
 
-.u-addbutton {
-  width: 520px;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
-  // line-height: 100px;
-}
+// .u-addbutton {
+//   width: 520px;
+//   border-top: 2px solid #000;
+//   border-bottom: 2px solid #000;
+//   line-height: 100px;
+// }
 
 .u-loginbtn {
   margin-top: 10px;
@@ -146,11 +144,11 @@
 
 //----- icons -----
 
-.u-gf {
-  height: 80px;
-  border-bottom: 2px solid #000;
-  font-size: 60px;
-}
+// .u-gf {
+//   height: 80px;
+//   border-bottom: 2px solid #000;
+//   font-size: 60px;
+// }
 
 .u-g {
   padding-right: 20px;
@@ -199,9 +197,9 @@
   border-color: #000;
 }
 
-small {
-  margin-left: 450px;
-}
+// small {
+//   margin-left: 450px;
+// }
 
 /* .btn {
     margin-top: 30px;
