--- a/src/pages/product/style/Product.css
+++ b/src/pages/product/style/Product.css
@@ -189,7 +189,7 @@
 .pro-gif{
     width: 25vw;
     height: 60vh;
-    margin: 25% auto  ;
+    margin: 25% 13%  ;
     overflow: hidden;
 }
 .museumGif{
