--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -96,6 +96,7 @@ margin-left: 70px;
 
 .u-container2 {
   margin-top: 84px;
+  margin-left: -75px;
   
 }
 
@@ -107,6 +108,7 @@ margin-left: 70px;
   font-family: EngraversBold;
   font-size: 46px;
   letter-spacing: 5px;
+  margin-left: -30px;
 }
 
 //----- 登入、註冊btn -----
