--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -281,6 +281,12 @@
     .box{
         padding-left: 50px;
     }
+
+    .tage{
+        position: absolute;
+        top:80px;
+        right:180px;
+    }
         
 
 
