--- a/src/bootstrap/css/bootstrap.css
+++ b/src/bootstrap/css/bootstrap.css
@@ -3166,9 +3166,9 @@ input[type="button"].btn-block {
   opacity: 0;
 }
 
-/* .collapse:not(.show) {
+.collapse:not(.show) {
   display: none;
-} */
+}
 
 .collapsing {
   position: relative;
