--- a/src/pages/user/styles/MsgEdit.scss
+++ b/src/pages/user/styles/MsgEdit.scss
@@ -1,17 +1,19 @@
-
+.u-body {
+    background-color: #e8e8e8;
+}
 
 
 // ----- Logo -----
 
-.u-logo-header{
-    width: 1045px;
-    border-bottom: 2px solid #000;
-}
+// .u-logo-header{
+//     width: 1045px;
+//     border-bottom: 2px solid #000;
+// }
 
-.u-logo-header > img {
-    width: 190px;
-    padding-bottom: 20px;
-}
+// .u-logo-header > img {
+//     width: 190px;
+//     padding-bottom: 20px;
+// }
 
 // .item{
 //      margin-top: 70px;
@@ -54,6 +56,12 @@
     text-align: center;
     line-height: 60px;
 }
+
+.u-userMsg1 {
+    background-color: #000;
+}
+
+
 
 .u-userPwd1 > a{
     font-family: 'Noto Sans TC', sans-serif;
