--- a/src/pages/user/styles/PwdEdit.scss
+++ b/src/pages/user/styles/PwdEdit.scss
@@ -2,15 +2,15 @@
 
 // ----- Logo -----
 
-.u-logo-header {
-  width: 1045px;
-  border-bottom: 2px solid #000;
-}
+// .u-logo-header {
+//   width: 1045px;
+//   border-bottom: 2px solid #000;
+// }
 
-.u-logo-header > img {
-  width: 190px;
-  padding-bottom: 20px;
-}
+// .u-logo-header > img {
+//   width: 190px;
+//   padding-bottom: 20px;
+// }
 
 // .item{
 //      margin-top: 70px;
